Complete header, hero content, and image cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="header">
+        <div class="logo-text"> Header Logo </div>
         <div class="header-links">
             <ul>
                 <li><a href="#"> header link one</a></li>
@@ -19,8 +20,8 @@
     </div>
     <div class="content-one">
         <div class="block-one">
-            <div class="text"> This website is awesome </div>
-            <div class="text"> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast </div>
+            <div class="maintext"> This website is awesome </div>
+            <div class="subtext"> This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast </div>
             <button class="sign-up-top"> Sign up </button>
         </div>
         <div class="block-two">
@@ -28,23 +29,23 @@
         </div>
     </div>
     <div class="content-two">
-        <div class="sub-head-text"> Some random information </div>
+        <div class="sub-head-text"> Some random information. </div>
         <div class="cards">
             <div class="card-one">
-                <div class="card-text"> This is some subtext under a photo </div>
                 <img src="../landing-page/images/pexels-linkedin-sales-navigator-2182981.jpg" alt="Networking photo.">
+                <div class="card-text"> This is some subtext under an illustration or image </div>
             </div>
             <div class="card-two">
-                 <div class="card-text"> This is some subtext under a photo </div>
                 <img src="../landing-page/images/pexels-fauxels-3184639.jpg" alt="Collaboration photo.">
+                <div class="card-text"> This is some subtext under an illustration or image </div>
             </div>  
             <div class="card-three">
-                <div class="card-text"> This is some subtext under a photo </div>
                 <img src="images/pexels-lukas-669619.jpg" alt="Generic photo of data tables.">
+                <div class="card-text"> This is some subtext under an illustration or image </div>
             </div>    
             <div class="card-four">
-                <div class="card-text"> This is some subtext under a photo </div>
                 <img src="images/pexels-tiger-lily-7109313.jpg" alt="Another photo of data tables.">
+                <div class="card-text"> This is some subtext under an illustration or image </div>
             </div> 
         </div>
     </div>
