Complete call-to-action and footer

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="action-subtext"> Sign up for our product by clicking that button right over there! </div>
         </div>
         <div class="action-button">
-            <button class="sing-up-bottom"> Sign up </button>
+            <button class="sign-up-bottom"> Sign up </button>
         </div>
     </div>
     <div class="footer"> Copyright © Source Coty 2022 </div>
